--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -166,6 +166,17 @@
                     </li>
 
                     <li>
+                        <a href="javascript: void(0);" class="has-arrow waves-effect">
+                            <i class="ri-mail-send-line"></i>
+                            <span>Statistics</span>
+                        </a>
+                        <ul class="sub-menu" aria-expanded="false">
+                            <li><a href="/campaigns">Traffic Factory</a></li>
+                            <li><a href="#">ExoClick</a></li>
+                        </ul>
+                    </li>
+
+                    <li>
                         <a id="datepicker8" th:href="@{/report}" class=" waves-effect">
                             <i class="ri-table-2"></i>
                             <span>Report</span>
