Reworking all network statistics to use api

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -262,7 +262,7 @@
                                     <p class="c-grey">Track the most important for your business metrics in one easy-to-understand report.</p>
                                 </div>
                             </div>
-                            <a href="contact.html" class="button button-2">
+                            <a href="#reg" class="button button-2">
                                 <div class="button-inner">
                                     <div class="button-content">
                                         <h4>Get Started</h4>
@@ -340,7 +340,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="contact.html" class="button button-3">
+                            <a href="#reg" class="button button-3">
                                 <div class="button-inner">
                                     <div class="button-content">
                                         <h4>Get Started</h4>
