--- a/src/main/resources/templates/user/campaigns.html
+++ b/src/main/resources/templates/user/campaigns.html
@@ -168,13 +168,13 @@
                     </li>
 
                     <li>
-                        <a href="javascript: void(0);" class="active has-arrow waves-effect">
+                        <a href="javascript: void(0);" class="has-arrow waves-effect">
                             <i class="ri-mail-send-line"></i>
                             <span>Statistics</span>
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
-                            <li><a href="/campaigns">Traffic Factory</a></li>
-                            <li><a href="#">ExoClick</a></li>
+                            <li><a href="/campaigns?network=TF">Traffic Factory</a></li>
+                            <li><a href="/campaigns?network=EXO">ExoClick</a></li>
                         </ul>
                     </li>
 
@@ -244,17 +244,17 @@
                     <div class="col-12">
                         <div class="page-title-box d-sm-flex align-items-center justify-content-between">
                             <h4 th:text="'Campaigns ('+${dates}+')'" class="mb-sm-0">Campaigns statistic</h4>
-                            <a id="datepicker1" th:href="@{/campaigns(ds=${currentDate}, de=${currentDate})}">Today</a>
-                            <a id="datepicker2" th:href="@{/campaigns(ds=${currentDate.minusDays(1)}, de=${currentDate.minusDays(1)})}">Yesterday</a>
-                            <a id="datepicker3" th:href="@{/campaigns(ds=${currentDate.minusDays(2)}, de=${currentDate})}">Last 3
+                            <a id="datepicker1" th:href="@{/campaigns(ds=${currentDate}, de=${currentDate}, network=${param.network})}">Today</a>
+                            <a id="datepicker2" th:href="@{/campaigns(ds=${currentDate.minusDays(1)}, de=${currentDate.minusDays(1)}, network=${param.network})}">Yesterday</a>
+                            <a id="datepicker3" th:href="@{/campaigns(ds=${currentDate.minusDays(2)}, de=${currentDate}, network=${param.network})}">Last 3
                                 days</a>
-                            <a id="datepicker4" th:href="@{/campaigns(ds=${currentDate.minusDays(6)}, de=${currentDate})}">Last 7
+                            <a id="datepicker4" th:href="@{/campaigns(ds=${currentDate.minusDays(6)}, de=${currentDate}, network=${param.network})}">Last 7
                                 days</a>
-                            <a id="datepicker5" th:href="@{/campaigns(ds=${currentDate.withDayOfMonth(1)}, de=${currentDate})}">This
+                            <a id="datepicker5" th:href="@{/campaigns(ds=${currentDate.withDayOfMonth(1)}, de=${currentDate}, network=${param.network})}">This
                                 Month</a>
                             <a id="datepicker6" th:href="@{/campaigns(ds=${currentDate.minusMonths(1).withDayOfMonth(1)},de=${currentDate.minusMonths(1)
                                 .withDayOfMonth(currentDate.minusMonths(1).getMonth()
-                                .length(currentDate.minusMonths(1).isLeapYear()))})}">Last Month</a>
+                                .length(currentDate.minusMonths(1).isLeapYear()))}, network=${param.network})}">Last Month</a>
 
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
@@ -273,19 +273,6 @@
                     <div class="col-xl-12">
                         <div class="card">
                             <div class="card-body">
-                                <div class="dropdown float-end">
-                                    <a href="#" class="dropdown-toggle arrow-none card-drop" data-bs-toggle="dropdown"
-                                       aria-expanded="false">
-                                        <i class="mdi mdi-dots-vertical"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-end">
-                                        <!-- item-->
-                                        <a href="javascript:void(0);" class="dropdown-item">Copy to ClipBoard</a>
-
-                                    </div>
-                                </div>
-
-
                                 <div style="margin-bottom: 50px;" class="table-responsive">
                                     <table data-order='[]' id="datatable-buttons" class="table mb-0">
                                         <thead class="table-light">
@@ -332,22 +319,17 @@
                                     </div>
                                     <form th:method="POST" th:action="@{/credentials/save}" th:object="${credentialsADCOMBO}">
                                         <div class="modal-body">
-                                            <h5>Enter Network Credentials on Adcombo.com</h5>
-                                            <div class="row mb-3">
+                                            <h5>Enter Network Credentials from Adcombo.com</h5>
+
+                                            <p>You can get it - <strong>(User Profile - Account settings - API key)</strong></p>
+                                            <div class="row mb-4">
                                                 <input hidden th:field="${credentialsADCOMBO.id}" th:name="${credentialsADCOMBO.id}" th:value="${credentialsADCOMBO.getId()}"/>
 
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">Username</label>
-                                                <div class="col-sm-10">
+                                                <label style="margin-right: -40px" for="example-text-input" class="col-sm-3 col-form-label">API-token</label>
+                                                <div class="col-sm-9">
                                                     <input th:field="${credentialsADCOMBO.username}" th:name="${credentialsADCOMBO.username}" th:value="${credentialsADCOMBO.getUsername()}" class="form-control" type="text" id="example-text-input">
                                                 </div>
-                                            </div>
-                                            <div class="row mb-3">
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">Password</label>
-                                                <div class="col-sm-10">
-                                                    <input th:field="${credentialsADCOMBO.password}" th:name="${credentialsADCOMBO.password}" th:value="${credentialsADCOMBO.getPassword()}" class="form-control" type="text">
-                                                </div>
                                                 <input hidden name="networkName" value="ADCOMBO" />
-
                                             </div>
                                         </div>
                                         <div class="modal-footer">
@@ -372,18 +354,20 @@
                                     </div>
                                     <form th:method="POST" th:action="@{/credentials/save}" th:object="${credentialsTF}">
                                         <div class="modal-body">
-                                            <h5>Enter Network Credentials on TrafficFactory.com</h5>
-                                            <div class="row mb-3">
+                                            <h5>Enter Network Credentials from TrafficFactory.com</h5>
+
+                                            <p>You can get it - <strong>(Help - API - Create API key)</strong></p>
+                                            <div class="row mb-4">
                                                 <input hidden th:field="${credentialsTF.id}" th:name="${credentialsTF.id}" th:value="${credentialsTF.getId()}"/>
 
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">Username</label>
-                                                <div class="col-sm-10">
+                                                <label for="example-text-input" class="col-sm-2 col-form-label">API token</label>
+                                                <div class="col-sm-9">
                                                     <input th:field="${credentialsTF.username}" th:name="${credentialsTF.username}" th:value="${credentialsTF.getUsername()}" class="form-control" type="text" id="example-text-input">
                                                 </div>
                                             </div>
-                                            <div class="row mb-3">
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">Password</label>
-                                                <div class="col-sm-10">
+                                            <div class="row mb-4">
+                                                <label for="example-text-input" class="col-sm-2 col-form-label">Token password</label>
+                                                <div class="col-sm-9">
                                                     <input th:field="${credentialsTF.password}" th:name="${credentialsTF.password}" th:value="${credentialsTF.getPassword()}" class="form-control" type="text">
                                                 </div>
                                                 <input hidden name="networkName" value="TF" />
@@ -412,23 +396,18 @@
                                     </div>
                                     <form th:method="POST" th:action="@{/credentials/save}" th:object="${credentialsEXO}">
                                         <div class="modal-body">
-                                            <h5>Enter Network Credentials on ExoClick.com</h5>
-                                            <div class="row mb-3">
+                                            <h5>Enter Network Credentials from ExoClick.com</h5>
+
+                                            <p>You can get it - <strong>(User Profile - API token - New API token)</strong></p>
+                                            <div class="row mb-4">
                                                 <input hidden th:field="${credentialsEXO.id}" th:name="${credentialsEXO.id}" th:value="${credentialsEXO.getId()}"/>
 
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">Username</label>
-                                                <div class="col-sm-10">
+                                                <label style="margin-right: -40px" for="example-text-input" class="col-sm-3 col-form-label">Api-token</label>
+                                                <div class="col-sm-9">
                                                     <input th:field="${credentialsEXO.username}" th:name="${credentialsEXO.username}" th:value="${credentialsEXO.getUsername()}" class="form-control" type="text" id="example-text-input">
                                                 </div>
                                             </div>
-                                            <div class="row mb-3">
-                                                <label for="example-text-input" class="col-sm-2 col-form-label">Password</label>
-                                                <div class="col-sm-10">
-                                                    <input th:field="${credentialsEXO.password}" th:name="${credentialsEXO.password}" th:value="${credentialsEXO.getPassword()}" class="form-control" type="text">
-                                                </div>
-                                                <input hidden name="networkName" value="EXO" />
-
-                                            </div>
+                                            <input hidden name="networkName" value="EXO" />
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-light waves-effect" data-bs-dismiss="modal">Close</button>
@@ -441,7 +420,7 @@
                         </div><!-- /.modal -->
                     </div>
 
-                </div>
+                </div> <!-- end row -->
             </div>
 
         </div>
