--- a/src/main/resources/templates/user/report.html
+++ b/src/main/resources/templates/user/report.html
@@ -246,8 +246,8 @@
                     <div class="col-12">
                         <div class="page-title-box d-sm-flex align-items-center justify-content-between">
                             <h4 th:text="'Report ('+${dates}+')'" class="mb-sm-0">Report</h4>
-                            <a id="datepicker1" href="/report?type=daily">Daily report</a>
-                            <a id="datepicker2" href="/report?type=month">Monthly report</a>
+                            <a class="btn btn-link btn-rounded waves-effect" id="datepicker1" href="/report?type=daily">Daily report</a>
+                            <a class="btn btn-link btn-rounded waves-effect" id="datepicker2" href="/report?type=month">Monthly report</a>
 
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
